fix fypos and refactor container

--- a/readme.org
+++ b/readme.org
@@ -9,9 +9,9 @@
 
 #+TITLE: Object-commander
 
-=object-commander= is an easy manager for the objects' initialization and access the them with container.
+=Object-commander= is an easy manager for the objects' initialization and release. In addition, you can access the them with a global container mechanism everywhere without introducing ohter library dependencies.
 
-* why object commander
+* Why object commander
 
   In golang, we mainly rely on the ~init~ function to handle the object's initialization and maybe other things to run when impoting the package. Indeed, it's a powerful feature but it introduces a =side effect=! Try to imagine that you get a slow startup of your application by just importing a package. When digging into the package, you find there is a time-consuming function in the ~init~ function. Surprised! Can you imagine if the situations appear everywhere?
 
